# ielts-mock-exam

./: .gitignore  CHANGELOG.md  HANDOVER.md  README.md  REQUIREMENTS_V1.0.md  audit.py  audit_data_quality.py  audit_report.json  build-www.sh  build_tests.py  bundle_data.py  check_data_regression.py  classify_writing_types.py  create_cam15_data.py  create_cam16_data.py  create_cam17_all_tests.py  create_cam19_data.py  cross_validate_fix.py  cross_validate_speaking.py  enrich_json_from_md.py  extract_answer_keys.py  extract_ground_truth.py  extract_listening_pdf.py  final_cleanup_speaking.py  find_answer_keys.py  fix_all_listening.py  fix_cam14_counts.py  fix_cam20_speaking.py  fix_cam20_vlm.py  fix_counts.py  fix_listening_mc.py  fix_speaking_targeted.py  fix_speaking_vlm.py  fix_speaking_vlm_v2.py  generate_speaking_data.py  index.html  inspect_answer_pdf.py  normalize_speaking_schema.py  package.json  requirements.txt  (+11 more)
css/: style.css
data/: test1.json  test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test2.json  test20.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
e2e/: playwright.config.js  validate-system.spec.js
js/: app.js  cambridge-adapter.js  dashboard.js  data-bundle.js  data.js  exam.js  history.js  i18n.js  listening-review.js  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: whisper-cli
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  whisper.rs
(+142 files in other folders)
