[package]
name = "ielts-mock-exam"
version = "2.0.0"
description = "IELTS Mock Exam System - Desktop Application"
authors = ["alwinqin"]
edition = "2021"

[lib]
name = "ielts_mock_exam_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
